--- a/test2.html
+++ b/test2.html
@@ -122,7 +122,7 @@ be easily accessiblew</p>
         <p class="lead">And an even wittier subheading.</p>
       </div>
       <div class="bg-dark shadow-sm mx-auto"></div>
-      <img src="C:\Users\user\Desktop\html\KakaoTalk_20220516_201354487.png" alt=="C:\Users\user\Desktop\html\KakaoTalk_20220516_201354487.png" style="width: 80%; height: 500px; border-radius: 21px 21px 0 0;"></div>
+      <img src="https://github.com/mongna/Bodybalance/blob/main/AdobeStock_319146887_Preview.jpeg" alt=="https://github.com/mongna/Bodybalance/blob/main/AdobeStock_319146887_Preview.jpeg" style="width: 80%; height: 500px; border-radius: 21px 21px 0 0;"></div>
     </div>
 
     <div class="bg-primary me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
