--- a/test2.html
+++ b/test2.html
@@ -112,7 +112,7 @@ be easily accessiblew</p>
         <p class="lead">Fall accidents can be prevented through balance training</p>
       </div>
       <div class="bg-light shadow-sm mx-auto"></div>
-        <img src="C:\Users\user\Desktop\html\AdobeStock_319146887_Preview.jpeg" alt="C:\Users\user\Desktop\html\AdobeStock_319146887_Preview.jpeg" style="width: 80%; height: 800px; border-radius: 21px 21px 0 0;"></div>
+        <img src="https://raw.githubusercontent.com/mongna/Bodybalance/main/AdobeStock_319146887_Preview.jpeg" alt="https://raw.githubusercontent.com/mongna/Bodybalance/main/AdobeStock_319146887_Preview.jpeg" style="width: 80%; height: 800px; border-radius: 21px 21px 0 0;"></div>
         </div>
 
   <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
