--- a/test2.html
+++ b/test2.html
@@ -129,7 +129,7 @@ be easily accessiblew</p>
       <div class="my-3 py-3">
         <h2 class="display-5">Another headline</h2>
         <p class="lead">And an even wittier subheading.</p>
-        <img src="C:\Users\user\Desktop\html\AdobeStock_314031320_Preview.jpeg" alt="C:\Users\user\Desktop\html\AdobeStock_314031320_Preview.jpeg" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+        <img src="https://raw.githubusercontent.com/mongna/Bodybalance/main/AdobeStock_314031320_Preview.jpeg" alt="https://raw.githubusercontent.com/mongna/Bodybalance/main/AdobeStock_314031320_Preview.jpeg" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
       </div>
       <div class="bg-light shadow-sm mx-auto" ></div>
     </div>
