--- a/test2.html
+++ b/test2.html
@@ -82,7 +82,8 @@
 <header class="site-header sticky-top py-1">
   <nav class="container d-flex flex-column flex-md-row justify-content-between">
     <a class="py-2" href="https://mongna.github.io/Bodybalance/test2.html" aria-label="Product">
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img" viewBox="0 0 24 24"><title>Product</title><circle cx="12" cy="12" r="10"/>
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img" viewBox="0 0 24 24">
+        <title>Product</title><circle cx="12" cy="12" r="10"/>
         <path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"/></svg>
     </a>
     <a class="py-2 d-none d-md-inline-block" href="https://mongna.github.io/Bodybalance/test.html">report</a>
@@ -112,7 +113,9 @@ be easily accessiblew</p>
         <p class="lead">Fall accidents can be prevented through balance training</p>
       </div>
       <div class="bg-light shadow-sm mx-auto"></div>
-        <img src="https://raw.githubusercontent.com/mongna/Bodybalance/main/_319146887_Preview.jpeg" alt="https://raw.githubusercontent.com/mongna/Bodybalance/main/_319146887_Preview.jpeg" style="width: 80%; height: 800px; border-radius: 21px 21px 0 0;"></div>
+        <img src="https://raw.githubusercontent.com/mongna/Bodybalance/main/_319146887_Preview.jpeg" 
+             alt="https://raw.githubusercontent.com/mongna/Bodybalance/main/_319146887_Preview.jpeg" 
+             style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
         </div>
 
   <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
@@ -122,14 +125,18 @@ be easily accessiblew</p>
         <p class="lead">And an even wittier subheading.</p>
       </div>
       <div class="bg-dark shadow-sm mx-auto"></div>
-      <img src="https://raw.githubusercontent.com/mongna/Bodybalance/main/KakaoTalk_20220516_201411879.png" alt=="https://raw.githubusercontent.com/mongna/Bodybalance/main/KakaoTalk_20220516_201411879.png" style="width: 80%; height: 500px; border-radius: 21px 21px 0 0;"></div>
+      <img src="https://raw.githubusercontent.com/mongna/Bodybalance/main/KakaoTalk_20220516_201411879.png" 
+           alt=="https://raw.githubusercontent.com/mongna/Bodybalance/main/KakaoTalk_20220516_201411879.png" 
+           style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
     </div>
 
     <div class="bg-primary me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
       <div class="my-3 py-3">
         <h2 class="display-5">Another headline</h2>
         <p class="lead">And an even wittier subheading.</p>
-        <img src="https://raw.githubusercontent.com/mongna/Bodybalance/main/AdobeStock_314031320_Preview.jpeg" alt="https://raw.githubusercontent.com/mongna/Bodybalance/main/AdobeStock_314031320_Preview.jpeg" style="width: 80%; height: 500px; border-radius: 21px 21px 0 0;"></div>
+        <img src="https://raw.githubusercontent.com/mongna/Bodybalance/main/AdobeStock_314031320_Preview.jpeg" 
+             alt="https://raw.githubusercontent.com/mongna/Bodybalance/main/AdobeStock_314031320_Preview.jpeg" 
+             style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
       </div>
       <div class="bg-light shadow-sm mx-auto" ></div>
     </div>
