--- a/test2.html
+++ b/test2.html
@@ -119,7 +119,7 @@ be easily accessiblew</p>
              style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
         </div>
 
-  <div class="d-md-flex flex-md-equal e-100 my-md-3 ps-md-3">
+  <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
     <div class="bg-light me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
       <div class="my-3 p-3">
         <h2 class="display-5">Easy access to exercise</h2>
@@ -128,7 +128,7 @@ be easily accessiblew</p>
       <div class="bg-dark shadow-sm mx-auto"></div>
       <img src="https://raw.githubusercontent.com/mongna/Bodybalance/main/KakaoTalk_20220516_201411879.png" 
            alt=="https://raw.githubusercontent.com/mongna/Bodybalance/main/KakaoTalk_20220516_201411879.png" 
-           style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+           float: right; style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
     </div>
 
     <div class="bg-primary me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
