--- a/test2.html
+++ b/test2.html
@@ -109,7 +109,7 @@ be easily accessiblew</p>
   <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
     <div class="bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
       <div class="my-3 py-3">
-        <p> class="display-5">Improving the sense <br>
+        <p class="display-5">Improving the sense <br>
           of balance</p>
         <p class="lead">Fall accidents can be prevented through balance training</p>
       </div>
@@ -128,7 +128,7 @@ be easily accessiblew</p>
       <div class="bg-dark shadow-sm mx-auto"></div>
       <img src="https://raw.githubusercontent.com/mongna/Bodybalance/main/KakaoTalk_20220516_201411879.png" 
            alt=="https://raw.githubusercontent.com/mongna/Bodybalance/main/KakaoTalk_20220516_201411879.png" 
-           float: right; style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+           style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
     </div>
 
     <div class="bg-primary me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
