--- a/test2.html
+++ b/test2.html
@@ -109,8 +109,7 @@ be easily accessiblew</p>
   <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
     <div class="bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
       <div class="my-3 py-3">
-        <p class="display-5">Improving the sense <br>
-          of balance</p>
+        <h2 class="display-5">Improving the sense of balance</h2>
         <p class="lead">Fall accidents can be prevented through balance training</p>
       </div>
       <div class="bg-light shadow-sm mx-auto"></div>
