--- a/test2.html
+++ b/test2.html
@@ -110,7 +110,8 @@ be easily accessiblew</p>
     <div class="bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
       <div class="my-3 py-3">
         <h2 class="display-5">Improving the sense of balance</h2>
-        <p class="lead">Fall accidents can be prevented through balance training</p>
+        <p class="lead">Fall accidents can be prevented 
+          through balance training</p>
       </div>
       <div class="bg-light shadow-sm mx-auto"></div>
         <img src="https://raw.githubusercontent.com/mongna/Bodybalance/main/main.jpeg" 
