--- a/test2.html
+++ b/test2.html
@@ -121,7 +121,7 @@ be easily accessiblew</p>
   <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
     <div class="bg-light me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
       <div class="my-3 p-3">
-        <h2 class="display-5">Easy access to exercise</h2>
+        <p class="display-5">Easy access <br> to exercise</p>
         <p class="lead">And an even wittier subheading.</p>
       </div>
       <div class="bg-dark shadow-sm mx-auto"></div>
