--- a/test2.html
+++ b/test2.html
@@ -118,10 +118,10 @@ be easily accessiblew</p>
              style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
         </div>
 
-  <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
+  <div class="d-md-flex .flex-row-reverse w-100 my-md-3 ps-md-3">
     <div class="bg-light me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
       <div class="my-3 p-3">
-        <p class="display-5">Easy access <br> to exercise</p>
+        <h2 class="display-5">Easy access to exercise</h2>
         <p class="lead">And an even wittier subheading.</p>
       </div>
       <div class="bg-dark shadow-sm mx-auto"></div>
