--- a/test.html
+++ b/test.html
@@ -89,7 +89,7 @@
 <div class="col-lg-8 mx-auto p-3 py-md-5">
   <header class="site-header sticky-top py-1">
     <nav class="container d-flex flex-column flex-md-row justify-content-between">
-      <a class="py-2" href="https://mongna.github.io/Bodybalance/test2.html" aria-label="Product">
+      <a class="py-2" href="https://mongna.github.io/Bodybalance/test.html#" aria-label="Product">
         <svg xmlns="http://www.w3.org/2000/svg" 
              width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
              class="d-block mx-auto" role="img" viewBox="0 0 24 24">
