--- a/test.html
+++ b/test.html
@@ -110,7 +110,7 @@ It's hard to get close to them, but through games,
 be easily accessiblew.</p>
 
     <div class="mb-5">
-      <a href="/docs/5.2/examples/" class="btn btn-primary btn-lg px-4">Download examples</a>
+      <a href="https://www.hidoc.co.kr/healthstory/news/C0000654980" class="btn btn-primary btn-lg px-4">Searching News</a>
     </div>
 
     <hr class="col-3 col-md-2 mb-5">
