--- a/test.html
+++ b/test.html
@@ -90,7 +90,7 @@
   <header class="site-header sticky-top py-1">
     <nav class="container d-flex flex-column flex-md-row justify-content-between">
       <a class="py-2" href="#" aria-label="Product">
-        <svg xmlns="http://www.w3.org/2000/svg" 
+        <svg xmlns="https://mongna.github.io/Bodybalance/test2.html" 
              width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
              class="d-block mx-auto" role="img" viewBox="0 0 24 24">
           <title>Product</title><circle cx="12" cy="12" r="10"/>
@@ -110,7 +110,7 @@ It's hard to get close to them, but through games,
 be easily accessiblew.</p>
 
     <div class="mb-5">
-      <a href="/docs/5.2/examples/" class="btn btn-primary btn-lg px-4">Searching News</a>
+      <a href="/docs/5.2/examples/" class="btn btn-primary btn-lg px-4">Download examples</a>
     </div>
 
     <hr class="col-3 col-md-2 mb-5">
