--- a/test.html
+++ b/test.html
@@ -115,8 +115,10 @@ be easily accessiblew.</p>
 
     <div class="row g-5">
       <div class="col-md-6">
-        <h2>Starter projects</h2>
-        <p>Ready to beyond the starter template? Check out these open source projects that you can quickly duplicate to a new GitHub repository.</p>
+        <h2>Let's avoid bullets</h2>
+        <p>We can go up to the balance ball and play a game to avoid bullets coming from both sides.<br>
+          To avoid bullets, we'll have to move from side to side on the balance ball. <br>
+          The rules of the game are really simple, but let's challenge how long we can avoid bullets that get faster over time</p>
         <ul class="icon-list ps-0">
           <li class="d-flex align-items-start mb-1"><a href="https://github.com/twbs/bootstrap-npm-starter" rel="noopener" target="_blank">yet</a></li>
           <li class="text-muted d-flex align-items-start mb-1">yet</li>
