--- a/test.html
+++ b/test.html
@@ -119,12 +119,13 @@ be easily accessiblew.</p>
     <div class="row g-5">
       <div class="col-md-6">
         <h2>Let's avoid bullets</h2>
-        <p>We can go up to the balance ball and play a game to avoid bullets coming from both sides.<br>
-          To avoid bullets, we'll have to move from side to side on the balance ball. <br>
-          The rules of the game are really simple, but let's challenge how long we can avoid bullets that get faster over time</p>
+        <p>This game avoids bullets from both sides.<br>
+          To avoid bullets, we have to move from side to side on the balance ball.<br>
+          The rules of the game are really simple, but let's challenge how long you can avoid bullets that go faster over time</p>
         <ul class="icon-list ps-0">
-          <li class="d-flex align-items-start mb-1"><a href="https://github.com/twbs/bootstrap-npm-starter" rel="noopener" target="_blank">yet</a></li>
-          <li class="text-muted d-flex align-items-start mb-1">yet</li>
+          <li class="d-flex align-items-start mb-1">
+            <a href="https://github.com/twbs/bootstrap-npm-starter" rel="noopener" target="_blank">yet</a></li>
+          <li class="text-muted d-flex align-items-start mb-1"></li>
         </ul>
       </div>
 
