--- a/test2.html
+++ b/test2.html
@@ -99,8 +99,8 @@
       <p class="lead fw-normal">As we get older, we try to prevent body imbalance
 From now on, you should exercise to balance your body.
 It's hard to get close to them, but through games,
-be easily accessiblew</p>
-      <a class="btn btn-outline-secondary" href="#">Coming soon</a>
+be easily accessible.</p>
+     <!-- <a class="btn btn-outline-secondary" href="#"></a> -->
     </div>
     <div class="product-device shadow-sm d-none d-md-block"></div>
     <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
@@ -122,7 +122,7 @@ be easily accessiblew</p>
     <div class="bg-light me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
       <div class="my-3 p-3">
         <h2 class="display-5">Easy access to exercise</h2>
-        <p class="lead">And an even wittier subheading.</p>
+        <p class="Let's avoid bullets from both sides.</p>
       </div>
       <div class="bg-dark shadow-sm mx-auto"></div>
       <img src="https://raw.githubusercontent.com/mongna/Bodybalance/main/KakaoTalk_20220516_201411879.png" 
