--- a/test2.html
+++ b/test2.html
@@ -110,7 +110,7 @@ be easily accessible.</p>
     <div class="bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
       <div class="my-3 py-3">
         <p class="display-5">Improving the sense <br> of balance</p>
-        <p class="lead">Fall accidents can be prevented through balance training</p>
+        <p class="lead"> Fall accidents can be prevented through balance training</p>
       </div>
       <div class="bg-light shadow-sm mx-auto"></div>
         <img src="https://raw.githubusercontent.com/mongna/Bodybalance/main/main.jpeg" 
@@ -122,7 +122,7 @@ be easily accessible.</p>
     <div class="bg-light me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
       <div class="my-3 p-3">
         <h2 class="display-5">Easy access to exercise</h2>
-        <p class="Let's avoid bullets from both sides.</p>
+        <p class="lead">And an even wittier subheading.</p>
       </div>
       <div class="bg-dark shadow-sm mx-auto"></div>
       <img src="https://raw.githubusercontent.com/mongna/Bodybalance/main/KakaoTalk_20220516_201411879.png" 
