--- a/test2.html
+++ b/test2.html
@@ -100,7 +100,8 @@
 From now on, you should exercise to balance your body.
 It's hard to get close to them, but through games,
 be easily accessible.</p>
-     <!-- <a class="btn btn-outline-secondary" href="#"></a> -->
+
+      <a class="btn btn-outline-secondary" href="#"></a>
     </div>
     <div class="product-device shadow-sm d-none d-md-block"></div>
     <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
