--- a/test.html
+++ b/test.html
@@ -135,7 +135,7 @@
     <div class="col-lg-8 mx-auto p-3 py-md-5">
       <header class="site-header sticky-top py-1">
         <nav class="container d-flex flex-column flex-md-row justify-content-between">
-          <a class="py-2" href="#" aria-label="Product">
+          <a class="py-2" href="https://mongna.github.io/Bodybalance/test2.html" aria-label="Product">
             <svg xmlns="https://mongna.github.io/Bodybalance/test2.html" 
                  width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                  class="d-block mx-auto" role="img" viewBox="0 0 24 24">
@@ -183,12 +183,8 @@
             </button>
 
           </div>
-
         </div>
       </main>
-      <footer class="pt-5 my-5 text-muted border-top">
-        Created by the Bootstrap team &middot; &copy; 2022
-      </footer>
     </div>
 
 
