--- a/test.html
+++ b/test.html
@@ -187,6 +187,9 @@ The rules of the game are very simple, but let's challenge how to avoid bullets 
           </div>
         </div>
       </main>
+            <footer class="pt-5 my-5 text-muted border-top">
+        Balance development instrument using Gyrosenser &middot; &copy; 2022
+      </footer>
     </div>
 
 
