--- a/test.html
+++ b/test.html
@@ -157,7 +157,7 @@
     be easily accessiblew.</p>
 
         <div class="mb-5">
-          <a href="/docs/5.2/examples/" class="btn btn-primary btn-lg px-4">Download examples</a>
+          <a href="/docs/5.2/examples/" class="btn btn-primary btn-lg px-4">Searching News</a>
         </div>
 
         <hr class="col-3 col-md-2 mb-5">
@@ -169,8 +169,6 @@
 To avoid bullets, we have to move from side to side on the balance ball. <br>
 The rules of the game are very simple, but let's challenge how to avoid bullets that go faster over time.</p>
             <ul class="icon-list ps-0">
-              <li class="d-flex align-items-start mb-1"><a href="https://github.com/twbs/bootstrap-npm-starter" rel="noopener" target="_blank">yet</a></li>
-              <li class="text-muted d-flex align-items-start mb-1">yet</li>
             </ul>
           </div>
 
