--- a/ranking.html
+++ b/ranking.html
@@ -149,6 +149,7 @@
    <a class="py-2 d-none d-md-inline-block" href="#">ranking</a>
    <a class="py-2 d-none d-md-inline-block" href="#">searching</a>
  </nav>
+  <input class="form-control form-control-dark w-100 rounded-0 border-0" type="text" placeholder="Search" aria-label="Search">
 </header>
 
 <div class="container-fluid">
